# sakimi-next

./: .gitignore  Cargo.toml  OFFICIAL_QWEN3_NEXT_AUDIT.md  README.md
docs/: huawei-cloud-quickstart.md  tencent-cloud-quickstart.md
scripts/: generate_ai_corpus.py  switch_candle_backend.sh  train_huawei_gpu.sh  train_nvidia_gpu.sh  train_tencent_gpu.sh
src/: activation.rs  attention.rs  cache.rs  config.rs  conv.rs  data.rs  deltanet.rs  ffn.rs  main.rs  model.rs  mtp.rs  rms_norm.rs  rope.rs  tokenizer.rs  trainable.rs  training.rs
