[package]
name = "sakimi_next"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8", features = ["accelerate", "metal"] }
candle-nn = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
